--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,17 @@ sklearn>=0.0
 torch>=1.4.0
 scipy>=1.3.1
 gitpython
-spacy>=2.2.4
+spacy>=2.1.3
 joblib>=0.13.2
 python-Levenshtein>=0.12.0
-fairseq>=0.10.2
+fairseq>=0.10.0
 truecase
 sentencepiece>=0.1.83
 imohash>=1.0.4
 cachetools>=4.0.0
 dill>=0.3.0
 submitit
-#faiss-gpu
+faiss-gpu
 sacremoses>=0.0.38
 nevergrad>=0.4.0.post3
 editdistance>=0.5.3
