--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ sklearn>=0.0
 torch>=1.4.0
 scipy>=1.3.1
 gitpython
-spacy>=2.1.3
+spacy>=2.1.3,<3
 joblib>=0.13.2
 python-Levenshtein>=0.12.0
 # https://github.com/pytorch/fairseq/issues/3535
