--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,4 @@ tokenizers>=0.5.2
 easse@ git+https://github.com/feralvam/easse.git
 kenlm@ git+https://github.com/kpu/kenlm.git
 cachier>=1.2.8
+huggingface
